# light-moe

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  environment.yml  pyproject.toml  setup.py  项目名称：Light-MoE 基于CuTe的高性能流水线并行MoE推理引擎.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  comprehensive_benchmark.py  cuda_benchmark.py  ep_vs_single.py  fused_ops_benchmark.py  results.json  test_expert_parallel.py
benchmarks/e2e/: bench_inference.py
benchmarks/kernels/: bench_grouped_gemm.py
csrc/: bindings.cpp  fused_gate.cu  fused_moe_ops.cu  grouped_gemm.cu
demo/: gradio_app.py
docs/: getting_started.md
examples/: multi_gpu_demo.py  simple_inference.py
include/light_moe/comm/: all_to_all.h
include/light_moe/core/: tensor.h  types.h
include/light_moe/ops/: fused_gate.h  grouped_gemm.h
python/light_moe/: __init__.py  cuda_kernels.py
python/light_moe/_C/: bindings.cpp
python/light_moe/distributed/: __init__.py  comm_group.py  expert_parallel.py  pipeline.py
python/light_moe/engine/: __init__.py  executor.py  kv_cache.py  sampler.py
python/light_moe/model/: __init__.py  attention.py  config.py  loader.py  moe_block.py  transformer.py
python/light_moe/ops/: __init__.py  activation.py  grouped_gemm.py  moe_gate.py  rmsnorm.py
scripts/: setup_env.sh
src/comm/: nccl_wrapper.cu
src/ops/cute/: fused_moe_gate.cu  grouped_gemm.cu
tests/cpp/: CMakeLists.txt
tests/python/: test_config.py  test_engine.py  test_model.py  test_ops.py
