[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light-moe"
version = "0.1.0"
description = "High-performance MoE inference engine with CuTe-optimized kernels"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Light-MoE Team" }
]
keywords = ["moe", "cuda", "inference", "transformer", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
demo = [
    "gradio>=4.0",
    "transformers",
]

[project.urls]
Homepage = "https://github.com/Whitehall945/light-moe"
Documentation = "https://github.com/Whitehall945/light-moe#readme"
Repository = "https://github.com/Whitehall945/light-moe"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
