# Placeholder for C++ tests
# Tests will be added as kernels are implemented

if(NOT LIGHT_MOE_BUILD_TESTS)
    return()
endif()

# Find GTest
find_package(GTest QUIET)

if(GTest_FOUND)
    enable_testing()
    
    # Example test (to be implemented)
    # add_executable(test_grouped_gemm test_grouped_gemm.cpp)
    # target_link_libraries(test_grouped_gemm light_moe GTest::gtest_main)
    # add_test(NAME test_grouped_gemm COMMAND test_grouped_gemm)
else()
    message(STATUS "GTest not found, C++ tests will not be built")
endif()
